--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Phuc</title>
 </head>
 <body>
-    <a href="./b1/index.html">Bai tap 1</a>
+    <a href="b1/index.html">Bai tap 1</a>
     <a href="b2/index.html">Bai tap 2</a>
     <a href="b3/index.html">Bai tap 3</a>
     <a href="b4/index.html">Bai tap 4</a>
