--- a/b2/index.html
+++ b/b2/index.html
@@ -8,6 +8,6 @@
     <script src="style.js"></script>
 </head>
 <body>
-    
+  <h1>Bài 2: Tính S = 1^2 + 2^2 + 3^2 +. .. n^2.</h1> 
 </body>
 </html>
