--- a/b4/index.html
+++ b/b4/index.html
@@ -8,6 +8,6 @@
     <script src="style.js"></script>
 </head>
 <body>
-    
+    <h1>Bài 4: Tính S = x + x^2 + x^3 + … + x^n.</h1>
 </body>
 </html>
