--- a/b6/index.html
+++ b/b6/index.html
@@ -8,6 +8,9 @@
     <script src="style.js"></script>
 </head>
 <body>
-    
+    <h1>Viết hàm kiểm tra một số có phải là số nguyên tố hay không. Xem lại kiến thức toán học
+        để hiện thực. Số nguyên tố là số chỉ chia hết cho 1 và chính nó thôi. Ví dụ số 3 chỉ chia hết cho 1
+        và 3. Tương tự số 5 chỉ chia hết cho 1 và 5. Còn số 6 không phải là số nguyên tố vì số 6 chia hết
+        cho cả 1, 6, 3 và 2.</h1>
 </body>
 </html>
