--- a/b3/index.html
+++ b/b3/index.html
@@ -8,6 +8,6 @@
     <script src="style.js"></script>
 </head>
 <body>
-    
+    <h1>Bài 3: Tính S = 1 + ½ + 1/3 + ¼ + … + 1/n.</h1>
 </body>
 </html>
