--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="b4/index.html">Bai tap 4</a>
     <a href="b5/index.html">Bai tap 5</a>
     <a href="b6/index.html">Bai tap 6</a>
+    <a href="b7/index.html">Bai tap 7</a>
     <a href="baitap/index.html">Bai tap tren lop</a>
 </body>
 </html>
